fix: shadcn의 Select UI를 활성화 시킬 경우 스크롤바가 사라지며 특정 layout의 위치가 불안정해지는 문제를 발견했으며 github issue를 확인해 global.css부분의 overflow: visible !important를 통해 해결했습니다. 하지만 overflow가 중요한 UI가 있는 경우엔 다른 방법을 생각해봐야할 것 같습니다.

--- a/app/globals.css
+++ b/app/globals.css
@@ -132,3 +132,7 @@
 .text-glow {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+html body[data-scroll-locked] {
+  overflow: visible !important;
+  margin-right: 0 !important;
+}
